fix loader alignment

--- a/extension/src/popup/components/accountMigration/ConfirmMigration/styles.scss
+++ b/extension/src/popup/components/accountMigration/ConfirmMigration/styles.scss
@@ -4,5 +4,6 @@
     flex-direction: column;
     gap: 1.5rem;
     align-items: center;
+    margin-top: 8rem;
   }
 }
